tests/fixtures/invalid/sum_3_args.py
# sum() takes at most 1 argument, got 3
x = sum(1, 1, 1)
